static/styles/zulip.css
/* ... */
input,
button,
select,
textarea {
    font-family: 'Humbug', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    line-height: normal;
}

blockquote p {
    font-weight: normal;
}

a {
    cursor: pointer;
}

.no-select {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

p.n-margin {
    margin: 10px 0px 0px 0px;
}

.small-line-height {
    line-height: 1.1;
}

.float-left {
    float: left;
}

.float-right {
    float: right;
}

.float-clear {
    clear: both;
}

.no-margin {
    margin: 0;
}

.border-radius {
    border-radius: 4px;
}

.modal-backdrop {
    z-index: 102;
}

.top-messages-logo {
    position: absolute;
    left: calc(50% - 12px);
    top: 67px;
    width: 24px;
    height: 24px;
}

#unmute_muted_topic_notification {
    display: none;
    position: absolute;
    width: 400px;
    top: 0px;
    left: calc(50vw - 220px);
    padding: 15px;

    background-color: #FAFAFA;
    border-radius: 5px;
    box-shadow: 0px 0px 30px rgba(0,0,0,0.25);
    z-index: 110;

    animation-name: pulse;
    animation-iteration-count: infinite;
    animation-duration: 2s;

    transition-property: top, bottom;
    transition-duration: 0.5s;
}

#unmute_muted_topic_notification.show {
    top: 50px;
}

#unmute_muted_topic_notification h3 {
    font-size: 16pt;
    margin-top: 2px;
}

@keyframes pulse {
    0% {
        box-shadow: 0px 0px 30px rgba(0,0,0,0.35);
    }
    50% {
        box-shadow: 0px 0px 30px rgba(0,0,0,0.15);
    }
    100% {
        box-shadow: 0px 0px 30px rgba(0,0,0,0.35);
    }
}

#unmute_muted_topic_notification .btn {
    background-color: transparent;
    border: 1px solid #444;
    outline: none;
    transition: all 0.2s ease;
}

#unmute_muted_topic_notification .btn:hover {
    background-color: #444;
    color: #FAFAFA;
}

#unmute_muted_topic_notification .exit-me {
    font-size: 30pt;
    font-weight: 200;
    margin: 5px 0px 0px 10px;
    cursor: pointer;
}

.header {
    position: fixed;
    z-index: 102; /* Needs to be higher than .alert-bar-container */
    width: 100%;
    background: #ffffff;
    border-bottom: 1px solid #dadada;
    height: 40px;
}

.app {
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    z-index: 99;
    -webkit-overflow-scrolling: touch;
}

.app-main,
.header-main {
    width: 100%;
    max-width: 1400px;
    min-width: 950px;
    margin: 0px auto;
    padding: 0px;
    position: relative;
}

.app-main {
    height: 100%;
    min-height: 100%;
}

.fixed-app {
    width: 100%;
    position: fixed;
    z-index: 98;
    left: 0px;
}

.column-left,
.column-right {
    width: 250px;
    max-width: 250px;
}

.column-left {
    position: absolute;
    left: 0px;
    top: 0px;
}

.column-right {
    position: absolute;
    right: 0px;
    top: 0px;
}

.app-main .column-left .left-sidebar,
.app-main .column-right .right-sidebar {
    position: fixed;
    margin-top: 50px;
    z-index: 100;
}

.app-main .column-left .left-sidebar {
    width: 242px;
    padding-left: 0px;
}

.app-main .column-right .right-sidebar {
    padding-left: 15px;
    width: 235px;
}

.app-main .column-middle {
    min-height: 100%;
    background-color: #ffffff;
}

.column-middle {
    margin-right: 250px;
    margin-left: 250px;
    position: relative;
}

textarea,
input {
    font-family: 'Humbug', Helvetica, Arial, sans-serif;
}

/* Override Bootstrap's fixed sizes for various elements */

textarea,
label {
    font-size: inherit;
    line-height: inherit;
}

/* List of text-like input types taken from Bootstrap */

input[type="text"],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="search"],
input[type="tel"],
input[type="color"]
{
    font-size: inherit;
    height: 1.4em;
}

li,
.table th,
.table td {
    line-height: inherit;
}

.btn {
    font-size: inherit;
    height: auto;
    line-height: 100%;
}

.copy_message, .copy_message:focus {
    background-image: url('/static/images/clippy.svg');
    background-size: contain;
    background-repeat: no-repeat;
    background-color: white;
    background-position: center;
    height: 20px;
    width: 15px;
    padding: 5px 10px;
    border-radius: 2px;
    position: relative;
    top: 32px;
    left: -5px;
    margin-top: -8px;
    display: block;
}

.copy_message:hover {
    background-color: #dadada;
}

.btn-large {
    font-size: 115%;
}

.header-main .logo {
    display: inline-block;
    font-size: 120%;
    font-weight: 900;
    text-shadow: none;
    color: #ffffff;
    font-variant: small-caps;
    letter-spacing: 2px;
    line-height: 18px;
    text-decoration: none;
    position: relative;
}

.header-main .logoimage {
    height: 40px;
    width: auto;
}

#user-settings-avatar {
    width: 100px;
    height: 100px;
    margin-top: 10px;
}

/* Classes for hiding and showing controls */

.notdisplayed {
    display: none !important;
}

.notvisible {
    visibility: hidden !important;
    width: 0px !important;
    min-width: 0px !important;
    min-height: 0px !important;
    height: 0px !important;
    overflow: hidden !important;
    position: absolute !important;
}

/* Relative positioning */

.position-relative {
    position: relative;
}

/* Lighter strong */

strong {
    font-weight: 600;
}

/* Inline and block code */

code {
    /* 12/14 em, so bootstrap's default 12 px,
       when body is the default 14 px */
    font-size: 0.857em;
}

.message_content p code {
    white-space: pre-wrap;
    padding: 0px 4px;
    background-color: #fff;
}

/* This ensures bulleted lists are nicely centered in 1-line messages */
.message_content ul {
    margin: 5px 0 5px 20px;
}

.codehilite {
    display: block !important;
    border: none !important;
    background: none !important;
}
/* ... */

